# toMarkdownMCP

./: .gitignore  BLOCKQUOTE_EXTRACTION.md  BROWSER_TOOLS.md  BUILD.md  CHANGELOG.md  CSS_STYLING_HINTS.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  Dockerfile  ENHANCEMENTS.md  FORM_EXTRACTION.md  GETTING_STARTED.md  HEADING_ANALYSIS.md  HTML_SUPPORT.md  IMAGE_EXTRACTION.md  INSTALL.md  LINK_EXTRACTION.md  MCP_REGISTRY_CONFIG.json  MCP_SUBMISSION_GUIDE.md  MCP_TEST_RESULTS.md  MCP_TOOL_SCHEMA.json  OBSIDIAN_TOOLS.md  PUBLISH_TO_REGISTRIES.md  QUICKSTART.md  QUICK_START.md  RAG_TOOLS.md  README.md  REGISTRY_SUMMARY.md  SRE_TOOLS.md  USAGE.md  WEBARCHIVE_SUPPORT.md  install.sh
.github/workflows/: ci.yml  docker.yml  gui-release.yml  release.yml
developerExample/: README.md  capture_tui.py  capture_url.py
developer_examples/: README.md  output.md
docs/deployment/: DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCKER_HUB_QUICK_START.md  DOCKER_HUB_SETUP.md  MCP_REGISTRIES_GUIDE.md  MCP_SO_SUBMISSION.md  MCP_SUBMISSION_GUIDE.md  RELEASE.md
docs/features/: CODE_LANGUAGE_DETECTION.md  COMMENT_PRESERVATION.md  DEFINITION_LISTS.md  DOCUMENT_CONVERSION.md  MARKUP_CONVERSION.md  METADATA_EXTRACTION.md  TABLE_CONVERSION.md  TOC_GENERATION.md
docs/gui/: GUI.md  INSTALL.md  USER_GUIDE.md
docs/guides/: GETTING_STARTED.md  INSTALL.md  QUICK_START.md  USAGE.md
docs/mcp_functions/: FUNCTIONS_REFERENCE.md  MCP_TOOL_SCHEMA.json
docs/planning/: MCP_TEST_RESULTS.md  PLANNED_ENHANCEMENTS.md  ROADMAP.md
docs/superpowers/plans/: 2026-07-17-gui-editor-phase2.md  2026-07-17-gui-polish-phase1.md  2026-07-18-drop-and-localize.md  2026-07-18-word-graph-implementation.md  2026-07-20-vault-viewer-enhancements.md  2026-07-21-vault-viewer-enhancements-plan.md
docs/superpowers/specs/: 2026-07-17-gui-polish-design.md  2026-07-18-drop-and-localize-design.md  2026-07-18-word-graph-design.md  2026-07-20-vault-viewer-enhancements-design.md  2026-07-21-vault-viewer-enhancements-design.md
docs/tools/: AI_TOOLS.md  OBSIDIAN_TOOLS.md  RAG_TOOLS.md  SECOND_BRAIN_TOOLS.md
examples/: code_blocks_demo.html  comment_demo.html  form_demo.html  images_demo.html  link_demo.html  sample.adoc  sample.docx  sample.eml  sample.epub  sample.htm  sample.html  sample.mhtml  sample.odt  sample.org  sample.pptx  sample.rss  sample.rst  sample.rtf  sample.tex  sample.webarchive  sample.wiki  sample.xlsx  sample_with_metadata.html  styled_page.html  table_demo.html  test.js  test.py  test.rs  test.txt  test_mcp.sh  toc_demo.html
gui/: Cargo.toml  tauri.conf.json
gui/capabilities/: default.json
gui/icons/: icon.icns
gui/src/: clipboard_ops.rs  config.rs  export.rs  file_types.rs  image_zoom.rs  lib.rs  logging.rs  main.rs  render.rs  state.rs  word_graph.rs
gui/src/commands/: clipboard_commands.rs  file_ops.rs  image_commands.rs  mod.rs  preview.rs  recent.rs  recycle_commands.rs  search.rs  settings_commands.rs  tab_commands.rs
gui/src/vault/: indexer.rs  mod.rs  schema.rs
gui/src/viewers/: code.rs  hex.rs  image.rs  markdown.rs  mod.rs  traits.rs
gui/src/word_graph/: db.rs  indexer.rs  queries.rs  tokenizer.rs
gui/tests/: code_viewer_tests.rs  file_ops_tests.rs  file_type_detection_tests.rs  hex_viewer_tests.rs  image_viewer_tests.rs  integration_test.rs  integration_tests.rs  recycle_commands_test.rs  search_tests.rs  tab_commands_test.rs  vault_schema_tests.rs  word_graph_integration.rs
gui/tests/word_graph_test_vault/: Note1.md  Note2.md  Note3.md
gui/ui/: image-zoom-ui.js  index.html
gui/ui/js/: tab-manager.js
src/: blockquote_extractor.rs  browser.rs  code_language_detector.rs  comment_extractor.rs  converter.rs  definition_list_converter.rs  doc_intel.rs  document_converter.rs  embeddings.rs  error.rs  feed_email_converter.rs  file_type.rs  form_extractor.rs  heading_analyzer.rs  html_converter.rs  image_extractor.rs  knowledge.rs  lib.rs  link_extractor.rs  llm.rs  main.rs  markup_converter.rs  office_converter.rs  pipeline.rs  rag.rs  retrieval.rs  similarity.rs  sources.rs  table_converter.rs  textmetrics.rs  toc_generator.rs  webarchive_parser.rs
src/obsidian/: callout.rs  canvas.rs  config.rs  dataview.rs  frontmatter.rs  mod.rs  tasks.rs  template.rs  tools.rs  vault.rs  wikilink.rs
src/tui/: app.rs  mod.rs  render.rs
tests/: cli.rs  jsonrpc.rs
tests/fixtures/mini_vault/: Another Note.md  Board.canvas  Callouts.md  Note A.md  Note B.md  Rendering Demo.md
tests/fixtures/mini_vault/.obsidian/: app.json  daily-notes.json
tests/fixtures/mini_vault/attachments/: sample.tif
tests/fixtures/mini_vault/folder/: Note A.md  Other.md
tests/fixtures/mini_vault/templates/: Daily.md
