[workspace]
members = [".", "gui"]
# Plain cargo build/test targets the MCP crate only; the GUI builds
# explicitly with `cargo build -p to_markdown_gui`.
default-members = ["."]

[package]
name = "to_markdown_mcp"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
description = "MCP server converting anything to Markdown — documents, office files, live web pages (Chromium), Obsidian vaults — plus RAG tools and token analytics. Includes a terminal Markdown viewer."
license = "MIT"
repository = "https://github.com/carlomagnoglobal/toMarkdownMCP"
readme = "README.md"
authors = ["Carlo Magno Global"]
keywords = ["mcp", "markdown", "converter", "obsidian", "rag"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = "0.11"
url = "2"
html2md = "0.2"
scraper = "0.17"
mime_guess = "2"
plist = "1"
pdf-extract = "0.7"
zip = "0.6"
quick-xml = "0.31"
calamine = "0.24"
csv = "1"
mail-parser = "0.9"
epub = "2"
mobi = "0.8"
feed-rs = "1"
msg_parser = "0.1"
chromiumoxide = "0.9"
futures = "0.3"
once_cell = "1"
serde_yaml = "0.9"
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tiktoken-rs = "0.6"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
fastembed = { version = "4", optional = true }

[features]
default = []
embeddings = ["dep:fastembed"]
