[package]
name = "to_markdown_gui"
version = "0.2.0"
edition = "2021"
description = "Desktop Markdown/vault viewer for toMarkdownMCP (Tauri)"
license = "MIT"
repository = "https://github.com/carlomagnoglobal/toMarkdownMCP"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
to_markdown_mcp = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
pulldown-cmark = "0.12"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
once_cell = "1"
chrono = "0.4"
docx-rs = "0.4"
