[package]
name = "to_markdown_gui"
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
description = "Desktop Markdown/vault viewer for toMarkdownMCP (Tauri)"
license = "MIT"
repository = "https://github.com/carlomagnoglobal/toMarkdownMCP"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
to_markdown_mcp = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
pulldown-cmark = "0.12"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
once_cell = "1"
chrono = "0.4"
docx-rs = "0.4"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
log = "0.4"

# Already in the dependency tree via tauri (same versions); declared directly
# only to read the macOS drag pasteboard for browser image drops.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = "0.3"

[lints]
workspace = true
