[package]
name = "to_markdown_gui"
version = "0.5.0"
edition = "2021"
rust-version = "1.88"
description = "Desktop Markdown/vault viewer for toMarkdownMCP (Tauri)"
license = "MIT"
repository = "https://github.com/carlomagnoglobal/toMarkdownMCP"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
to_markdown_mcp = { path = ".." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
pulldown-cmark = "0.12"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syntect = "5.0"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
docx-rs = "0.4"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
log = "0.4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
infer = "0.15"
image = "0.25"
thiserror = "1.0"

# Already in the dependency tree via tauri (same versions); declared directly
# only to read the macOS drag pasteboard for browser image drops.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
